# bridge_telemetria

./: .gitignore  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  SYSTEM_ANALYSIS.md  migrate.ps1
telemetry_client/: CLIENT_REFACTOR_REPORT.md  Cargo.toml  FINAL_CHECKLIST.md  README.md
telemetry_client/src/: main.rs
telemetry_server/: CLEAN_CODE_ANALYSIS.md  Cargo.toml  DECISION_ANALYSIS.md  FINAL_CHECKLIST.md  INTERACTIVE_COMMANDS.md  OPTIMIZATION_REPORT.md  README.md  SUMMARY.md
telemetry_server/src/: main.rs
